testsuite/tests/gnatcheck_errors/invalid_lkql_rules_config/not_indexable_args.lkql
val rules = @{
    identifier_suffixes: "huho"
}
